re PR middle-end/24135 (nonlocal goto from nested function gets 'undefined symbol' in assembler)

PR 24135
        * tree-nested.c (convert_nl_goto_reference): Lookup a translation
        before creating a new one.

From-SVN: r104911